--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 edition = "2021"
-name = "nospm"
+name = "snow"
 version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 json = "0.12.4"
+once_cell = "1.13.1"
+serde = "1.0.144"
+serde_derive = "1.0.144"
 temp-file = "0.1.7"
+toml = "0.5.9"
