--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,7 +1,7 @@
 [build]
 [target.x86_64-unknown-linux-gnu]
 rustflags = [
-    '-Clink-arg=-fuse-ld=lld',
+    '-Clink-arg=-fuse-ld=ld',
     '-Zshare-generics=y',
 ]
 
