--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,9 +1,20 @@
 [build]
 [target.x86_64-unknown-linux-gnu]
 rustflags = [
+    '-Clink-arg=-fuse-ld=lld',
     '-Zshare-generics=y',
 ]
 
+[target.x86_64-pc-windows-msvc]
+rustflags = ['-Zshare-generics=y']
+linker = 'rust-lld.exe'
+
+[target.x86_64-apple-darwin]
+rustflags = [
+    '-C',
+    '-Zshare-generics=y',
+    '-Csplit-debuginfo=unpacked',
+]
 [profile.dev]
 opt-level = 0
 debug = 2
@@ -15,3 +26,4 @@ opt-level = 3
 debug = 0
 incremental = false
 codegen-units = 256
+split-debuginfo = '...'
