--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ json = "0.12.4"
 once_cell = "1.13.1"
 serde = "1.0.144"
 serde_derive = "1.0.144"
+spinoff = "0.5.4"
 temp-file = "0.1.7"
 toml = "0.5.9"
