--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bpaf = { version = "0.6.0", features = ["derive"]}
 json = "0.12.4"
 once_cell = "1.13.1"
 serde = "1.0.144"
