--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 
 [dependencies]
 bpaf = { version = "0.6.0", features = ["derive"]}
+colorful = "0.2.1"
 json = "0.12.4"
 once_cell = "1.13.1"
 serde = "1.0.144"
